# maml

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  floskell.json  hie.yaml  maml  maml.cabal
app/: Main.hs
src/: Maml.hs
src/Maml/: Parser.hs  SQL.hs  Solver.hs  Types.hs
src/Maml/Parser/: Literal.hs  Types.hs
test/: example.maml
