cabal-version:       2.4
name:                maml
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/monoidcat/maml
bug-reports:         https://github.com/monoidcat/maml/issues
license:             MIT
license-file:        LICENSE
author:              Arturas Lebedevas
maintainer:          Arturas Lebedevas <monoidcat@gmail.com>
copyright:           2020 Arturas Lebedevas
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/monoidcat/maml.git

common common-options
  build-depends:       base ^>= 4.13.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  BlockArguments
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveGeneric
                       DeriveTraversable
                       DerivingStrategies
                       DerivingVia
                       DuplicateRecordFields
                       EmptyDataDecls
                       ExtendedDefaultRules
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       LiberalTypeSynonyms
                       MultiWayIf
                       NamedFieldPuns
                       NamedWildCards
                       NoMonomorphismRestriction
                       NoStarIsType
                       OverloadedStrings
                       PackageImports
                       PatternSynonyms
                       QuantifiedConstraints
                       RankNTypes
                       RecordWildCards
                       RoleAnnotations
                       ScopedTypeVariables
                       StandaloneDeriving
                       StandaloneKindSignatures
                       TupleSections
                       TypeApplications
                       TypeFamilyDependencies
                       TypeOperators
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Maml

executable maml
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       maml
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite maml-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       maml
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
